// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`targetTree target Order => untarget Order 1`] = `
Object {
  "focusMode": "TARGET_TREE",
  "focusedId": "",
  "focusedItem": Object {
    "batch": Object {},
    "order": Object {},
    "orderItem": Object {},
    "shipment": Object {},
  },
  "lines": Array [
    Object {
      "batch1": Object {
        "id": "batch1",
        "line": true,
        "related": true,
      },
      "batch2": Object {
        "id": "batch2",
        "line": true,
        "related": true,
      },
      "batch3": Object {
        "id": "batch3",
        "line": true,
        "related": true,
      },
      "item1": Object {
        "id": "item1",
        "line": true,
        "related": true,
      },
      "item2": Object {
        "id": "item2",
        "line": true,
        "related": true,
      },
      "order1": Object {
        "id": "order1",
        "line": true,
        "related": true,
      },
    },
  ],
  "targetedItem": Object {
    "batch": Object {
      "batch1": true,
      "batch2": true,
      "batch3": true,
    },
    "order": Object {
      "order1": true,
    },
    "orderItem": Object {
      "item1": true,
      "item2": true,
    },
  },
  "trees": Array [
    Object {
      "batch1": true,
      "batch2": true,
      "batch3": true,
      "item1": true,
      "item2": true,
      "order1": true,
    },
  ],
}
`;

exports[`targetTree target Order => untarget Order 2`] = `
Object {
  "focusMode": "TARGET",
  "focusedId": "",
  "focusedItem": Object {
    "batch": Object {},
    "order": Object {},
    "orderItem": Object {},
    "shipment": Object {},
  },
  "lines": Array [],
  "targetedItem": Object {
    "batch": Object {},
    "order": Object {},
    "orderItem": Object {},
  },
  "trees": Array [
    Object {},
  ],
}
`;

exports[`targetTree target Order => untarget OrderItem => target Order 1`] = `
Object {
  "focusMode": "TARGET_TREE",
  "focusedId": "",
  "focusedItem": Object {
    "batch": Object {},
    "order": Object {},
    "orderItem": Object {},
    "shipment": Object {},
  },
  "lines": Array [
    Object {
      "batch1": Object {
        "id": "batch1",
        "line": true,
        "related": true,
      },
      "batch2": Object {
        "id": "batch2",
        "line": true,
        "related": true,
      },
      "batch3": Object {
        "id": "batch3",
        "line": true,
        "related": true,
      },
      "item1": Object {
        "id": "item1",
        "line": true,
        "related": true,
      },
      "item2": Object {
        "id": "item2",
        "line": true,
        "related": true,
      },
      "order1": Object {
        "id": "order1",
        "line": true,
        "related": true,
      },
    },
  ],
  "targetedItem": Object {
    "batch": Object {
      "batch1": true,
      "batch2": true,
      "batch3": true,
    },
    "order": Object {
      "order1": true,
    },
    "orderItem": Object {
      "item1": true,
      "item2": true,
    },
  },
  "trees": Array [
    Object {
      "batch1": true,
      "batch2": true,
      "batch3": true,
      "item1": true,
      "item2": true,
      "order1": true,
    },
  ],
}
`;

exports[`targetTree target Order => untarget OrderItem => target Order 2`] = `
Object {
  "focusMode": "TARGET",
  "focusedId": "",
  "focusedItem": Object {
    "batch": Object {},
    "order": Object {},
    "orderItem": Object {},
    "shipment": Object {},
  },
  "lines": Array [
    Object {
      "batch1": Object {
        "id": "batch1",
        "line": false,
        "related": false,
      },
      "batch2": Object {
        "id": "batch2",
        "line": true,
        "related": true,
      },
      "batch3": Object {
        "id": "batch3",
        "line": true,
        "related": true,
      },
      "item1": Object {
        "id": "item1",
        "line": true,
        "related": false,
      },
      "item2": Object {
        "id": "item2",
        "line": true,
        "related": true,
      },
      "order1": Object {
        "id": "order1",
        "line": true,
        "related": false,
      },
    },
  ],
  "targetedItem": Object {
    "batch": Object {
      "batch2": true,
      "batch3": true,
    },
    "order": Object {
      "order1": true,
    },
    "orderItem": Object {
      "item2": true,
    },
  },
  "trees": Array [
    Object {
      "batch2": true,
      "batch3": true,
      "item2": true,
    },
  ],
}
`;

exports[`targetTree target Order => untarget OrderItem => target Order 3`] = `
Object {
  "focusMode": "TARGET_TREE",
  "focusedId": "",
  "focusedItem": Object {
    "batch": Object {},
    "order": Object {},
    "orderItem": Object {},
    "shipment": Object {},
  },
  "lines": Array [
    Object {
      "batch1": Object {
        "id": "batch1",
        "line": false,
        "related": false,
      },
      "batch2": Object {
        "id": "batch2",
        "line": true,
        "related": true,
      },
      "batch3": Object {
        "id": "batch3",
        "line": true,
        "related": true,
      },
      "item1": Object {
        "id": "item1",
        "line": true,
        "related": false,
      },
      "item2": Object {
        "id": "item2",
        "line": true,
        "related": true,
      },
      "order1": Object {
        "id": "order1",
        "line": true,
        "related": false,
      },
    },
    Object {
      "batch1": Object {
        "id": "batch1",
        "line": true,
        "related": true,
      },
      "batch2": Object {
        "id": "batch2",
        "line": true,
        "related": true,
      },
      "batch3": Object {
        "id": "batch3",
        "line": true,
        "related": true,
      },
      "item1": Object {
        "id": "item1",
        "line": true,
        "related": true,
      },
      "item2": Object {
        "id": "item2",
        "line": true,
        "related": true,
      },
      "order1": Object {
        "id": "order1",
        "line": true,
        "related": true,
      },
    },
  ],
  "targetedItem": Object {
    "batch": Object {
      "batch1": true,
      "batch2": true,
      "batch3": true,
    },
    "order": Object {
      "order1": true,
    },
    "orderItem": Object {
      "item1": true,
      "item2": true,
    },
  },
  "trees": Array [
    Object {
      "batch1": true,
      "batch2": true,
      "batch3": true,
      "item1": true,
      "item2": true,
      "order1": true,
    },
  ],
}
`;

exports[`targetTree target Order => untarget OrderItem => target OrderItem 1`] = `
Object {
  "focusMode": "TARGET_TREE",
  "focusedId": "",
  "focusedItem": Object {
    "batch": Object {},
    "order": Object {},
    "orderItem": Object {},
    "shipment": Object {},
  },
  "lines": Array [
    Object {
      "batch1": Object {
        "id": "batch1",
        "line": true,
        "related": true,
        "type": "BATCH",
      },
      "batch2": Object {
        "id": "batch2",
        "line": true,
        "related": true,
        "type": "BATCH",
      },
      "batch3": Object {
        "id": "batch3",
        "line": true,
        "related": true,
        "type": "BATCH",
      },
      "item1": Object {
        "id": "item1",
        "line": true,
        "related": true,
        "type": "ORDER_ITEM",
      },
      "item2": Object {
        "id": "item2",
        "line": true,
        "related": true,
        "type": "ORDER_ITEM",
      },
      "order1": Object {
        "id": "order1",
        "line": true,
        "related": true,
        "type": "ORDER",
      },
    },
  ],
  "targetedItem": Object {
    "batch": Object {
      "batch1": true,
      "batch2": true,
      "batch3": true,
    },
    "order": Object {
      "order1": true,
    },
    "orderItem": Object {
      "item1": true,
      "item2": true,
    },
  },
  "trees": Array [
    Object {
      "batch1": true,
      "batch2": true,
      "batch3": true,
      "item1": true,
      "item2": true,
      "order1": true,
    },
  ],
}
`;

exports[`targetTree target Order => untarget OrderItem => target OrderItem 2`] = `
Object {
  "focusMode": "TARGET",
  "focusedId": "",
  "focusedItem": Object {
    "batch": Object {},
    "order": Object {},
    "orderItem": Object {},
    "shipment": Object {},
  },
  "lines": Array [
    Object {
      "batch1": Object {
        "id": "batch1",
        "line": true,
        "related": true,
        "type": "BATCH",
      },
      "batch2": Object {
        "id": "batch2",
        "line": true,
        "related": true,
        "type": "BATCH",
      },
      "batch3": Object {
        "id": "batch3",
        "line": true,
        "related": true,
        "type": "BATCH",
      },
      "item1": Object {
        "id": "item1",
        "line": true,
        "related": true,
        "type": "ORDER_ITEM",
      },
      "item2": Object {
        "id": "item2",
        "line": true,
        "related": true,
        "type": "ORDER_ITEM",
      },
      "order1": Object {
        "id": "order1",
        "line": true,
        "related": true,
        "type": "ORDER",
      },
    },
  ],
  "targetedItem": Object {
    "batch": Object {
      "batch2": true,
      "batch3": true,
    },
    "order": Object {},
    "orderItem": Object {
      "item2": true,
    },
  },
  "trees": Array [
    Object {
      "batch2": true,
      "batch3": true,
      "item2": true,
    },
  ],
}
`;

exports[`targetTree target Order => untarget OrderItem => target OrderItem 3`] = `
Object {
  "focusMode": "TARGET_TREE",
  "focusedId": "",
  "focusedItem": Object {
    "batch": Object {},
    "order": Object {},
    "orderItem": Object {},
    "shipment": Object {},
  },
  "lines": Array [
    Object {
      "batch1": Object {
        "id": "batch1",
        "line": true,
        "related": true,
        "type": "BATCH",
      },
      "item1": Object {
        "id": "item1",
        "line": true,
        "related": true,
        "type": "ORDER_ITEM",
      },
      "order1": Object {
        "id": "order1",
        "line": true,
        "related": true,
        "type": "ORDER",
      },
    },
  ],
  "targetedItem": Object {
    "batch": Object {
      "batch1": true,
      "batch2": true,
      "batch3": true,
    },
    "order": Object {
      "order1": true,
    },
    "orderItem": Object {
      "item1": true,
      "item2": true,
    },
  },
  "trees": Array [
    Object {
      "batch2": true,
      "batch3": true,
      "item2": true,
    },
    Object {
      "batch1": true,
      "item1": true,
      "order1": true,
    },
  ],
}
`;
